kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptimehub-dev
  labels:
    app.kubernetes.io/part-of: uptimehub
    environment: dev
