kubernetes/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimehub-backend
  namespace: uptimehub-dev
spec:
  replicas: 2

  selector:
    matchLabels:
      app: uptimehub-backend

  template:
    metadata:
      labels:
        app: uptimehub-backend
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: uptimehub-app

      containers:
        - name: backend
          image: acruptimehubx51qfz.azurecr.io/uptimehub-backend:0.1.1
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
              name: http

          volumeMounts:
            - name: keyvault-secrets
              mountPath: /mnt/secrets-store
              readOnly: true

          startupProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 5
            failureThreshold: 30

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 20
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

      volumes:
        - name: keyvault-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: uptimehub-keyvault
