kubernetes/base/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptimehub-worker
  namespace: uptimehub-dev
spec:
  replicas: 2

  selector:
    matchLabels:
      app: uptimehub-worker

  template:
    metadata:
      labels:
        app: uptimehub-worker
        azure.workload.identity/use: "true"

    spec:
      serviceAccountName: uptimehub-app

      containers:
        - name: worker
          image: acruptimehubx51qfz.azurecr.io/uptimehub-backend:0.1.1
          imagePullPolicy: IfNotPresent

          command:
            - python
            - -m
            - app.services.monitor_worker

          ports:
            - name: metrics
              containerPort: 9101

          volumeMounts:
            - name: keyvault-secrets
              mountPath: /mnt/secrets-store
              readOnly: true

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

      volumes:
        - name: keyvault-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: uptimehub-keyvault
