kubernetes/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptimehub-backend
  namespace: uptimehub-dev
spec:
  type: ClusterIP

  selector:
    app: uptimehub-backend

  ports:
    - name: http
      port: 80
      targetPort: 8000
